# DNNLibrary

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: squeezenet_no.daq
app/src/main/cpp/: ModelBuilder.cpp  ModelBuilder.h  native-lib.cpp
app/src/main/java/me/daquexian/nnapiexample/: EnhancedCameraView.java  MainActivity.java  PortraitCameraView.java
app/src/main/res/layout/: activity_main.xml
dnn_library_c/: CMakeLists.txt  ModelBuilder.cpp  ModelBuilder.h  android_log_helper.h  dnn_save_result.cpp  dnn_simplest.cpp  main.cpp
dnnlibrary/: CMakeLists.txt
dnnlibrary/cpp/app/: CMakeLists.txt  dnn_infer_simple.cpp  dnn_simplest.cpp  nnapi_benchmark.cpp
dnnlibrary/cpp/lib/include/: ModelBuilder.h
dnnlibrary/cpp/lib/src/: ModelBuilder.cpp
dnnlibrary/src/main/cpp/: JavaWrapper.cpp  ModelBuilder.cpp  ModelBuilder.h
dnnlibrary/src/main/java/me/daquexian/dnnlibrary/: ModelWrapper.java
